recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:10: error: not enough arguments for method spiral: (nbPas: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameters angle, length, increment.
    spiral(length+nbPas)
          ^